--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"PATHS": {"main": "C:\\data", "chromedriver": "C:\\Users\\Mirchew\\Desktop\\chromedriver.exe", "headless": 0}, "firme": {"22918583": "ECHIPA OK", "22918582": "echipa", "37002523": "I.I. BOSTAN CONSTANTIN", "5748860": "SC ECHIPA OK SRL"}}
+{"PATHS": {"main": "C:\\data", "chromedriver": "/home/mircea/Desktop/chrome‌​driver", "headless": 0}, "firme": {"22918583": "ECHIPA OK", "22918582": "echipa", "37002523": "I.I. BOSTAN CONSTANTIN", "5748860": "SC ECHIPA OK SRL"}}
