--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
    - "3.6-dev"
 
 install:
-   - pip install -r requirements.txt
+   - pip install -r requirements.txt 
+   - sudo apt-get update
+   - wget "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-14.04/wxPython-4.0.0b1-cp35-cp35m-linux_x86_64.whl"
+   - pip install wxPython-4.0.0b1-cp35-cp35m-linux_x86_64.whl
 script:
    main
